k8s/applications/polybot/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polybot-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/whitelist-source-range: "149.154.160.0/20,91.108.4.0/22"  # Telegram IP ranges
spec:
  tls:
  - hosts:
    - maisaprod.fursa.click
    secretName: polybot-prod-tls
  rules:
  - host: maisaprod.fursa.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: polybot-service
            port:
              number: 8443
